All code re-formatted.